<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr09_20171.lab1.ContactInfo">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_telefono"
        android:hint="@string/txt_telefono"
        android:drawableLeft="@drawable/ic_call_black_24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:inputType="phone"
        android:imeOptions="actionNext"
        android:layout_marginRight="@dimen/activity_contactinfo_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_email"
        android:hint="@string/txt_email"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:layout_below="@id/edit_telefono"
        android:layout_alignParentLeft="true"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:layout_marginRight="@dimen/activity_contactinfo_margin"/>

    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autocomplete_acountry"
        android:hint="@string/txt_acountry"
        android:drawableLeft="@drawable/ic_public_black_24dp"
        android:layout_below="@id/edit_email"
        android:layout_alignParentLeft="true"
        android:inputType="textCapWords"
        android:imeOptions="actionNext"
        android:layout_marginRight="@dimen/activity_contactinfo_margin"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autocomplete_ccity"
        android:hint="@string/txt_ccity"
        android:drawableLeft="@drawable/ic_place_black_24dp"
        android:layout_below="@id/autocomplete_acountry"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="@dimen/activity_contactinfo_margin"
       android:inputType="textCapWords"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_direccion"
        android:hint="@string/txt_direccion"
        android:drawableLeft="@drawable/ic_add_location_black_24dp"
        android:layout_below="@id/autocomplete_ccity"
        android:layout_alignParentLeft="true"
        android:inputType="textNoSuggestions"
        android:layout_marginRight="@dimen/activity_contactinfo_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_OtherInfo"
        android:text="@string/btn_Next"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
