<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_other_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr09_20171.lab1.OtherInfo">

    <TextView
        android:text="@string/textView_pasatiempos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txHobby"
        android:textSize="18sp"
        android:layout_marginLeft="5dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txHobby"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <CheckBox
            android:text="@string/leer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cBox_1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:id="@+id/rBar_1"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_alignParentTop="true"
            android:stepSize="0.5"
            android:layout_toEndOf="@id/cBox_1"
            android:numStars="5" />

        <CheckBox
            android:text="@string/verTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cBox_2"
            android:layout_alignStart="@id/cBox_1"
            android:layout_below="@id/cBox_1"
            android:layout_alignParentStart="@id/cBox_1" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rBar_2"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_below="@id/rBar_1"
            android:stepSize="0.5"
            android:layout_alignStart="@id/rBar_1"
            android:numStars="5" />

        <CheckBox
            android:text="@string/bailar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cBox_3"
            android:layout_alignStart="@id/cBox_2"
            android:layout_below="@id/cBox_2"
            android:layout_alignParentStart="@id/cBox_2" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rBar_3"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_below="@id/rBar_2"
            android:stepSize="0.5"
            android:layout_alignStart="@id/rBar_2"
            android:numStars="5" />

        <CheckBox
            android:text="@string/cantar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cBox_4"
            android:layout_alignStart="@id/cBox_3"
            android:layout_below="@id/cBox_3"
            android:layout_alignParentStart="@id/cBox_3" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rBar_4"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_below="@id/rBar_3"
            android:stepSize="0.5"
            android:layout_alignStart="@id/rBar_3"
            android:numStars="5" />

        <CheckBox
            android:text="@string/nadar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cBox_5"
            android:layout_alignStart="@id/cBox_4"
            android:layout_below="@id/cBox_4"
            android:layout_alignParentStart="@id/cBox_4" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rBar_5"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_below="@+id/rBar_4"
            android:stepSize="0.5"
            android:layout_alignStart="@+id/rBar_4"
            android:numStars="5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_mostrar"
            android:text="@string/btn_mostrar"
            android:layout_below="@id/rBar_5"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tx_mostrar"
            android:layout_below="@id/btn_mostrar"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:scrollbars="vertical"/>
    </RelativeLayout>

</RelativeLayout>
